# shaper

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: main.rs  shape.rs  tool.rs
src/tools/: curvature_tool.rs  direct_selecting_tool.rs  drawing_tool.rs  editing_tool.rs  mod.rs  panning_tool.rs  selecting_tool.rs
